packages/stylist/tests/macro_integrations/selector_as_attribute-fail.stderr
error: unexpected ';' in selector, did you mean to write an attribute?
 --> $DIR/selector_as_attribute-fail.rs:3:36
  |
3 |         looks_like_selector(): blue;
  |                                    ^
